[package]
name = "nih_plug_webview"
version = "0.0.0"
edition = "2021"
authors = ["Max Huttunen <max.huttunen@gmail.com>"]
license = "ISC"

description = "An adapter to use webview GUIs with NIH-plug"

[workspace]
members = ["example", "xtask"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149e" }
parking_lot = "0.12.5"
serde_json = "1.0.149"
wry = { version = "0.54.1" }
baseview = { git = "https://github.com/JouderMin/baseview", rev = "d1f894e" }
raw-window-handle = { package = "raw-window-handle", version = "0.6.2" }
crossbeam = "0.8.2"
keyboard-types = "0.6.2"
