[package]
name = "gain"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>", "Max Huttunen <max.huttunen@gmail.com>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"], rev = "28b149e"  }
nih_plug_webview = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"